--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>atv01</title>
 </head>
 
-<body background="/img/fundo.png" text="white">
+<body background="img/fundo.png" text="white">
     <a name="topo"></a>
 
     <h1 align="center" color="white">Avanço no Campo da Inteligência Artificial: Novo Modelo de Linguagem da OpenAI Atinge Novo
